--- a/index.html
+++ b/index.html
@@ -211,21 +211,24 @@
 
 					<!-- /* Accepted */ -->
 					<p>
-						Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren Wang*. One Index for All: Towards
+						Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren Wang*. One Index
+						for All: Towards
 						Efficient Personalized PageRank Computation for Every Damping Factor. SIGMOD 2026 (Accepted)
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<p>
-						Yue Zeng, Miao Qiao, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Guoren Wang*. Scaling Up k-Clique Percolation
+						Yue Zeng, Miao Qiao, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Guoren Wang*. Scaling Up
+						k-Clique Percolation
 						Community Detection. SIGMOD 2026 (Accepted)
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<p>
-						Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Guoren Wang*. The Power of Core Clique Removal for Exact Clique
+						Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Guoren Wang*. The Power of Core Clique Removal for
+						Exact Clique
 						Enumeration. SIGMOD 2026 (Accepted)
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
@@ -234,19 +237,23 @@
 
 					<!-- /* TKDE */ -->
 					<p>
-						Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao. Provable Higher-order Graph Clustering: the Power of Peeling-based Approaches. TKDE, 2026 (Accepted)
-					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+						Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao.
+						Provable Higher-order Graph Clustering: the Power of Peeling-based Approaches. TKDE, 2026
+						(Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
-					
+
 
 					<!-- /* TBD */ -->
 					<p>
-						Longlong Lin, Yue He, Wei Chen, Pingpeng Yuan, <strong>Rong-Hua Li</strong>, Tao Jia. Effective and Efficient Conductance-based Community Search at Billion Scale. IEEE Transactions on Big Data, 2026 (Accepted)
-					<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+						Longlong Lin, Yue He, Wei Chen, Pingpeng Yuan, <strong>Rong-Hua Li</strong>, Tao Jia. Effective
+						and Efficient Conductance-based Community Search at Billion Scale. IEEE Transactions on Big
+						Data, 2026 (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
-					
+
 
 
 					<!-- /* 2025年 */ -->
@@ -257,17 +264,17 @@
 
 					<p>
 						Xunkai Li, Zhengyu Wu, Kaichi Yu, Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>,
-						Guoren Wang. Toward Data-centric Directed Graph Learning: An Entropy-driven Approach. ICML 2025
-						(Accepted).
+						Guoren Wang. Toward Data-centric Directed Graph Learning: An Entropy-driven Approach. ICML 2025.
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<p>
 						Yichun Yang, <strong>Rong-Hua Li*</strong>, Meihao Liao, Guoren Wang. Improved Algorithms for
-						Effective Resistance Computation on Graphs. COLT 2025 (Accepted).
-						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Improved Algorithms for Effective Resistance Computation on Graphs.pdf">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;
+						Effective Resistance Computation on Graphs. COLT 2025.
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/Improved Algorithms for Effective Resistance Computation on Graphs.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;
 						<!-- <a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
@@ -313,8 +320,9 @@
 					<p>
 						Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu Qin, Guoren Wang.
 						Integral Densest Subgraph Search on Directed Graphs. SIGMOD 2025.
-						<!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a> -->
-						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/Integral Densest Subgraph Search on Directed Graphs.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/Yalong-Zhang/maxab">(code)</a>
 					</p>
 
 					<p>
@@ -343,10 +351,10 @@
 
 					<p>
 						Qi Zhang, Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Guoren Wang. Approximate Anchored
-						Densest
-						Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						Densest Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/Approximate Anchored Densest Subgraph Search on Large Static.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/qizhang1996/aads">(code)</a>
 					</p>
 
 					<p>
