--- a/index.html
+++ b/index.html
@@ -149,12 +149,13 @@
 			<div class="con01_t">
 				<h4>课题组主要成员&nbsp;&nbsp;&nbsp;&nbsp;<a href="./groupPhotos.html">(师生合影)</a></h4>
 				<p>
-					<span style='font-size:12.0pt'><strong>助理教授</strong></span></br>
-				<p style='margin-top:0px'><a href="https://qinhc.github.io/">秦宏超</a></p>
+					<span style='font-size:12.0pt'><strong>教师</strong></span></br>
+				<p style='margin-top:0px'><a href="https://qinhc.github.io/">秦宏超</a> &nbsp;&nbsp;&nbsp;&nbsp; 助理教授</p>
+
+				<p style='margin-top:0px'><a href="https://qq-dai.github.io/">代强强</a> &nbsp;&nbsp;&nbsp;&nbsp; 副教授</p>
 				</p>
 				<p>
 					<span style='font-size:12.0pt'><strong>博士后</strong></span></br>
-				<p style='margin-top:0px'><a href="https://qq-dai.github.io/">代强强</a></p>
 				</p>
 				<p>
 					<span style='font-size:12.0pt'><strong>博士生</strong></span></br>
@@ -177,7 +178,7 @@
 					(2018-2022在读博士)，北京理工大学博士后（获批博士后站前基金资助、博士后面上基金），北京科技大学副教授</p>
 				<!-- ，博士期间一作发表ICDE 3篇，TKDE 2篇 -->
 				<p style='margin-top:0px'>3.<a href="https://qq-dai.github.io/">代强强</a>
-					(2019-2023在读博士)，北京理工大学博士后（获得2024年度CCF优博、博新计划、博士后面上基金、国家青年科学基金项目资助）</p>
+					(2019-2023在读博士)，北京理工大学博士后（获得2024年度CCF优博、博新计划、博士后面上基金、国家青年科学基金项目资助），北京理工大学副教授</p>
 				<!-- ，博士期间一作发表SIGMOD 3篇，TKDE 1篇，CIKM 2篇 -->
 				</p>
 				<p><strong>课题组已毕业硕士生绝大多数都进入国内头部IT企业或者国企工作。</strong> </p>
@@ -210,6 +211,39 @@
 
 
 					<!-- /* Accepted */ -->
+
+					<p>
+						Meihao Liao, Yueyang Pan, <strong>Rong-Hua Li*</strong>, Guoren Wang. Efficient Exact Resistance
+						Distance
+						Computation on Small-Treewidth Graphs: a Labelling Approach. SIGMOD 2026 (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Lianpeng Qiao, Donghang Cui, Guoren Wang.
+						Theoretically and
+						Practically Efficient Maximum Biclique Search. SIGMOD 2026 (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Jiayu Li, Yahui Sun, Bojing Ma, Libang Chen, Mengxi Hu, Feng Zhang, <strong>Rong-Hua
+							Li</strong>. Fast Optimal
+						Group Steiner Tree Search using GPUs. SIGMOD 2026 (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Qi Zhang, <strong>Rong-Hua Li*</strong>, Yalong Zhang, Hongchao Qin, Guoren Wang. Density
+						Decomposition on Large
+						Static and Dynamic Graphs: Algorithms and Applications. VLDB Journal (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
 					<p>
 						Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren Wang*. One Index
 						for All: Towards
@@ -236,14 +270,6 @@
 
 
 					<!-- /* TKDE */ -->
-					<p>
-						Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao.
-						Provable Higher-order Graph Clustering: the Power of Peeling-based Approaches. TKDE, 2026
-						(Accepted)
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-					</p>
-
 
 					<!-- /* TBD */ -->
 					<p>
@@ -265,8 +291,8 @@
 					<p>
 						Xunkai Li, Zhengyu Wu, Kaichi Yu, Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>,
 						Guoren Wang. Toward Data-centric Directed Graph Learning: An Entropy-driven Approach. ICML 2025.
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Toward Data-centric Directed Graph Learning: An Entropy-driven Approach.pdf">(pdf)</a>
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<p>
@@ -281,12 +307,10 @@
 
 					<p>
 						Lantian Xu, <strong>Rong-Hua Li*</strong>, Dong Wen, Qiangqiang Dai, Guoren Wang. Efficient
-						Antagonistic k-plex Enumeration in Signed Graphs, IEEE Transactions on Big Data (Accepted).
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						Antagonistic k-plex Enumeration in Signed Graphs, IEEE Transactions on Big Data.
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Antagonistic k-plex Enumeration in Signed Graphs.pdf">(pdf)</a>
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
-
-
 
 
 
@@ -345,8 +369,8 @@
 					<p>
 						Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Ye Yuan, Guoren Wang*.
 						Truss Decomposition in Hypergraphs, VLDB 2025.
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Truss Decomposition in Hypergraphs.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/VeryLargeGraph/HTRUSS">(code)</a>
 					</p>
 
 					<p>
@@ -424,6 +448,15 @@
 					</p>
 
 					<!-- /* TKDE */ -->
+
+					<p>
+						Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao:
+						Provable Higher-Order Graph Clustering: The Power of Peeling-Based Approaches. IEEE Trans.
+						Knowl. Data Eng. 37(9): 5568-5583 (2025)
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Provable Higher-Order Graph Clustering The Power of Peeling-Based Approaches.pdf">(pdf)</a>
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
 					<p>
 						Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang:
 						Colorful Star Motif
@@ -435,6 +468,22 @@
 					</p>
 
 					<!-- /* CIKM */ -->
+
+					<p>
+						Daohan Su, Xunkai Li, Zhenjun Li, Yinping Liao, <strong>Rong-Hua Li</strong> and Guoren Wang.
+						DiRW: Path-Aware Digraph Learning for Heterophily. CIKM 2025
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/DiRW Path-Aware Digraph Learning for Heterophily.pdf">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/dhsiuu/DiRW">(code)</a>
+					</p>
+
+					<p>
+						Zekai Chen, Xunkai Li, Yinlin Zhu, <strong>Rong-Hua Li*</strong>, Guoren Wang. Rethinking
+						Client-oriented Federated Graph Learning. CIKM 2025
+						<!-- &nbsp;&nbsp;&nbsp;
+						<a href="#">(pdf)</a>
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
 
 					<!-- /* IJCAI */ -->
 
@@ -456,7 +505,7 @@
 
 					<!-- /* PODS */ -->
 					<p>
-						Yizhou Dai, Miao Qiao, <strong>Rong-Hua Li</strong>. On Density-based Local Community Search.
+						Yizhou Dai, Miao Qiao, <strong>Rong-Hua Li</strong>. On Density-based Local Community Search.
 						PODS 2024.
 						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/On Density-based Local Community Search.pdf">(pdf)</a>
 					</p>
@@ -482,7 +531,7 @@
 
 					<!-- /* VLDB */ -->
 					<p>
-						Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren Wang. Efficient
+						Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren Wang. Efficient
 						Algorithms for Density Decomposition on Large Static and Dynamic Graphs. VLDB 2024.
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/Efficient Algorithms for Density Decomposition on Large Static and Dynamic Graphs.pdf">(pdf)</a>
@@ -490,8 +539,8 @@
 							href="https://github.com/ronghuali/Density_Decomposition_Computation">(code)</a>
 					</p>
 					<p>
-						Xunkai Li, Meihao Liao, Zhengyu Wu, Daohan Su, Wentao Zhang, <strong>Rong-Hua
-							Li*</strong>, Guoren Wang: LightDiC: A Simple yet Effective Approach for Large-scale Digraph
+						Xunkai Li, Meihao Liao, Zhengyu Wu, Daohan Su, Wentao Zhang, <strong>Rong-Hua
+							Li*</strong>, Guoren Wang: LightDiC: A Simple yet Effective Approach for Large-scale Digraph
 						Representation Learning. VLDB 2024.
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/LightDiC A Simple yet Effective Approach for Large-scale Digraph Representation Learning.pdf">(pdf)</a>
@@ -579,8 +628,8 @@
 
 					<!-- /* WWW */ -->
 					<p>
-						Xunkai Li, Jingyuan Ma, Zhengyu Wu, Daohan Su, Wentao Zhang, <strong>Rong-Hua
-							Li*</strong>, Guoren Wang. Rethinking Node-wise Propagation for Large-scale Graph Learning.
+						Xunkai Li, Jingyuan Ma, Zhengyu Wu, Daohan Su, Wentao Zhang, <strong>Rong-Hua
+							Li*</strong>, Guoren Wang. Rethinking Node-wise Propagation for Large-scale Graph Learning.
 						WWW, 2024.
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/Rethinking Node-wise Propagation for Large-scale Graph Learning.pdf">(pdf)</a>
@@ -589,8 +638,8 @@
 
 					<!-- /* TKDE */ -->
 					<p>
-						Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongzhi Chen, Guoren Wang.
-						Efficient k-Clique Counting on Large Graphs: The Power of Color-Based Sampling Approaches. IEEE
+						Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongzhi Chen, Guoren Wang.
+						Efficient k-Clique Counting on Large Graphs: The Power of Color-Based Sampling Approaches. IEEE
 						Transactions on Knowledge and Data Engineering, 2024.
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/Efficient_kk-Clique_Counting_on_Large_Graphs_The_Power_of_Color-Based_Sampling_Approaches.pdf">(pdf)</a>
@@ -600,7 +649,7 @@
 					<p>
 						Yuchen Meng, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Xiang Wu, Huanzhong Duan, Yanxiong Lu,
 						Guoren Wang. Encoding Group Interests with Persistent Homology for Personalized Search. IEEE
-						Transactions on Systems, Man, and Cybernetics: Systems, 2024.
+						Transactions on Systems, Man, and Cybernetics: Systems, 2024.
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/Encoding Group Interests With Persistent Homology for Personalized Search.pdf">(pdf)</a>
 						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
@@ -1356,7 +1405,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.5.26
+				Rong-Hua Li</a> | 更新时间2025.9.5
 		</div>
 	</div>
 	<!-- end of footer -->
