--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1267,7 +1267,7 @@ w\:* {behavior:url(#default#VML);}
 											Papers</SPAN></B><SPAN lang="EN-US"
 										style='font-size: 10pt; mso-fareast-font-family: "Times New Roman";'></SPAN></P>
 
-								            <div id="papers">
+								                        <div id="papers">
 
                 <!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
@@ -1442,6 +1442,7 @@ w\:* {behavior:url(#default#VML);}
 
                 <p id="paper-22">
                     Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over Signed Graphs with Differential Privacy, ICDE 2025. 
+                    &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Triangle Counting over Signed Graphs with Differential Privacy.pdf">(pdf)</a>
                 </p>
 
 
@@ -1501,7 +1502,7 @@ w\:* {behavior:url(#default#VML);}
 
 
                 <p id="paper-29">
-                    Daohan Su, Xunkai Li, Zhenjun Li, Yinping Liao, <strong>Rong-Hua Li</strong> and Guoren Wang. DiRW: Path-Aware Digraph Learning for Heterophily. CIKM 2025
+                    Daohan Su, Xunkai Li, Zhenjun Li, Yinping Liao, <strong>Rong-Hua Li*</strong> and Guoren Wang. DiRW: Path-Aware Digraph Learning for Heterophily. CIKM 2025
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/DiRW Path-Aware Digraph Learning for Heterophily.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/dhsiuu/DiRW">(code)</a>
                 </p>
@@ -2141,7 +2142,7 @@ w\:* {behavior:url(#default#VML);}
 
 
                 <p id="paper-98">
-                    Hongchao Qin, <strong>Rong-Hua Li</strong>, Guoren Wang, Lu Qin, Yurong Cheng, Ye Yuan. Mining Periodic Cliques in Temporal Networks. ICDE 2019: 1130-1141       ,
+                    Hongchao Qin, <strong>Rong-Hua Li</strong>, Guoren Wang, Lu Qin, Yurong Cheng, Ye Yuan. Mining Periodic Cliques in Temporal Networks. ICDE 2019: 1130-1141 ,
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Mining Periodic Cliques in Temporal Networks.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/MPC">(code)</a>
                 </p>
@@ -2195,7 +2196,7 @@ w\:* {behavior:url(#default#VML);}
 
                 <p id="paper-104">
                     <strong>Rong-Hua Li</strong>, Lu Qin, Fanghua Ye, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin
-						Zheng. Skyline Community Search in Multi-valued Networks. SIGMOD 2018: 457-472       ,
+						Zheng. Skyline Community Search in Multi-valued Networks. SIGMOD 2018: 457-472 ,
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Skyline Community Search in Multi-valued Networks.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/MAIC">(code)</a>
                 </p>
@@ -2212,7 +2213,7 @@ w\:* {behavior:url(#default#VML);}
 
 
                 <p id="paper-106">
-                    <strong>Rong-Hua Li</strong>, Jiao Su, Lu Qin, Jeffrey Xu Yu, Qiangqiang Dai. Persistent Community Search in Temporal Networks. ICDE 2018: 797-808       ,     ,  (A simpler version for chinese students)
+                    <strong>Rong-Hua Li</strong>, Jiao Su, Lu Qin, Jeffrey Xu Yu, Qiangqiang Dai. Persistent Community Search in Temporal Networks. ICDE 2018: 797-808 , , (A simpler version for chinese students)
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Persistent Community Search in Temporal Networks.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/tcore">(code)</a>
                 </p>
@@ -2398,6 +2399,7 @@ w\:* {behavior:url(#default#VML);}
 
 
             </div>
+
 
 							</div>
 						</TD>
