--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					</p>
 				</div>
 				<h4>主要学术论文</h4>
-				            <div id="papers">
+				                        <div id="papers">
 
                 <!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
@@ -378,6 +378,7 @@
 
                 <p id="paper-22">
                     Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over Signed Graphs with Differential Privacy, ICDE 2025. 
+                    &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Triangle Counting over Signed Graphs with Differential Privacy.pdf">(pdf)</a>
                 </p>
 
 
@@ -437,7 +438,7 @@
 
 
                 <p id="paper-29">
-                    Daohan Su, Xunkai Li, Zhenjun Li, Yinping Liao, <strong>Rong-Hua Li</strong> and Guoren Wang. DiRW: Path-Aware Digraph Learning for Heterophily. CIKM 2025
+                    Daohan Su, Xunkai Li, Zhenjun Li, Yinping Liao, <strong>Rong-Hua Li*</strong> and Guoren Wang. DiRW: Path-Aware Digraph Learning for Heterophily. CIKM 2025
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/DiRW Path-Aware Digraph Learning for Heterophily.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/dhsiuu/DiRW">(code)</a>
                 </p>
@@ -1077,7 +1078,7 @@
 
 
                 <p id="paper-98">
-                    Hongchao Qin, <strong>Rong-Hua Li</strong>, Guoren Wang, Lu Qin, Yurong Cheng, Ye Yuan. Mining Periodic Cliques in Temporal Networks. ICDE 2019: 1130-1141       ,
+                    Hongchao Qin, <strong>Rong-Hua Li</strong>, Guoren Wang, Lu Qin, Yurong Cheng, Ye Yuan. Mining Periodic Cliques in Temporal Networks. ICDE 2019: 1130-1141 ,
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Mining Periodic Cliques in Temporal Networks.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/MPC">(code)</a>
                 </p>
@@ -1131,7 +1132,7 @@
 
                 <p id="paper-104">
                     <strong>Rong-Hua Li</strong>, Lu Qin, Fanghua Ye, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin
-						Zheng. Skyline Community Search in Multi-valued Networks. SIGMOD 2018: 457-472       ,
+						Zheng. Skyline Community Search in Multi-valued Networks. SIGMOD 2018: 457-472 ,
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Skyline Community Search in Multi-valued Networks.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/MAIC">(code)</a>
                 </p>
@@ -1148,7 +1149,7 @@
 
 
                 <p id="paper-106">
-                    <strong>Rong-Hua Li</strong>, Jiao Su, Lu Qin, Jeffrey Xu Yu, Qiangqiang Dai. Persistent Community Search in Temporal Networks. ICDE 2018: 797-808       ,     ,  (A simpler version for chinese students)
+                    <strong>Rong-Hua Li</strong>, Jiao Su, Lu Qin, Jeffrey Xu Yu, Qiangqiang Dai. Persistent Community Search in Temporal Networks. ICDE 2018: 797-808 , , (A simpler version for chinese students)
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Persistent Community Search in Temporal Networks.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/tcore">(code)</a>
                 </p>
@@ -1335,6 +1336,7 @@
 
             </div>
 
+
 			</div>
 
 			<div class="con01_t">
@@ -1422,7 +1424,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.9.5
+				Rong-Hua Li</a> | 更新时间2025.9.8
 		</div>
 	</div>
 	<!-- end of footer -->
