--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@
 
 
                 <p id="paper-23">
-                    Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua Li</strong>. On Temporal-Constraint Subgraph Matching, ICDE 2025. 
+                    Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua Li</strong>. On Temporal-Constraint Subgraph Matching, ICDE 2025.
+                    &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/On Temporal-Constraint Subgraph Matching.pdf">(pdf)</a>
+                    &nbsp;&nbsp;&nbsp;<a href="https://github.com/xiaoyu-ll/TSI">(code)</a>
                 </p>
 
 
