--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1447,7 +1447,9 @@ w\:* {behavior:url(#default#VML);}
 
 
                 <p id="paper-23">
-                    Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua Li</strong>. On Temporal-Constraint Subgraph Matching, ICDE 2025. 
+                    Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua Li</strong>. On Temporal-Constraint Subgraph Matching, ICDE 2025.
+                    &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/On Temporal-Constraint Subgraph Matching.pdf">(pdf)</a>
+                    &nbsp;&nbsp;&nbsp;<a href="https://github.com/xiaoyu-ll/TSI">(code)</a>
                 </p>
 
 
