--- a/index.html
+++ b/index.html
@@ -205,7 +205,6 @@
 				<h4>主要学术论文</h4>
 				                        <div id="papers">
 
-
                 <!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
 
@@ -415,8 +414,7 @@
 
 
                 <p id="paper-26">
-                    <strong>Rong-Hua Li</strong>, Xiaowei Ye, Fusheng Jin, Yu-Ping Wang, Ye Yuan, Guoren Wang:
-						Counting Cohesive Subgraphs with Hereditary Properties. WWW 2025. 
+                    <strong>Rong-Hua Li</strong>, Xiaowei Ye, Fusheng Jin, Yu-Ping Wang, Ye Yuan, Guoren Wang. Counting Cohesive Subgraphs with Hereditary Properties. WWW 2025.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Counting Cohesive Subgraphs with Hereditary Properties.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/LightWant/HCS2">(code)</a>
                 </p>
@@ -426,16 +424,13 @@
 
 
                 <p id="paper-27">
-                    Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao:
-						Provable Higher-Order Graph Clustering: The Power of Peeling-Based Approaches. IEEE Trans. Knowl.  Data Eng.  37(9): 5568-5583 (2025)
+                    Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao. Provable Higher-Order Graph Clustering: The Power of Peeling-Based Approaches. IEEE Trans.  Knowl.  Data Eng.  37(9): 5568-5583 (2025)
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Provable Higher-Order Graph Clustering The Power of Peeling-Based Approaches.pdf">(pdf)</a>
                 </p>
 
 
                 <p id="paper-28">
-                    Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang:
-						Colorful Star Motif
-						Counting: Concepts, Algorithms and Applications. IEEE Trans. Knowl.  Data Eng.  37(3): 1105-1125 (2025)
+                    Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang. Colorful Star Motif Counting: Concepts, Algorithms and Applications. IEEE Trans.  Knowl.  Data Eng.  37(3): 1105-1125 (2025)
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Colorful Star Motif Counting  Concepts, Algorithms and Applications.pdf">(pdf)</a>
                 </p>
 
@@ -494,8 +489,7 @@
 
                 <p id="paper-33">
                     Meihao Liao, Junjie Zhou, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongyang Chen, Guoren
-						Wang: Efficient and Provable Effective Resistance Computation on Large Graphs: an Index-based
-						Approach. SIGMOD 2024. 
+						Wang. Efficient and Provable Effective Resistance Computation on Large Graphs: an Index-based Approach. SIGMOD 2024.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient and Provable Effective Resistance Computation on Large Graphs an Index-based Approach.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/EffectiveResistanceMultipleLandmark">(code)</a>
                 </p>
@@ -503,7 +497,7 @@
 
                 <p id="paper-34">
                     Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Donghang Cui, Meihao Liao, Yu-Xuan Qiu, Guoren
-						Wang: Efficient Maximal Biplex Enumerations with Improved Worst-Case Time Guarantee. SIGMOD 2024. 
+						Wang. Efficient Maximal Biplex Enumerations with Improved Worst-Case Time Guarantee. SIGMOD 2024.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Maximal Biplex Enumerations with Improved Worst-Case Time Guarantee.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/MaximalBiPlex">(code)</a>
                 </p>
@@ -521,8 +515,7 @@
 
                 <p id="paper-36">
                     Xunkai Li, Meihao Liao, Zhengyu Wu, Daohan Su, Wentao Zhang, <strong>Rong-Hua
-							Li*</strong>, Guoren Wang: LightDiC: A Simple yet Effective Approach for Large-scale Digraph
-						Representation Learning. VLDB 2024. 
+							Li*</strong>, Guoren Wang. LightDiC: A Simple yet Effective Approach for Large-scale Digraph Representation Learning. VLDB 2024.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/LightDiC A Simple yet Effective Approach for Large-scale Digraph Representation Learning.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/LightDiC">(code)</a>
                 </p>
@@ -668,23 +661,21 @@
 
                 <p id="paper-52">
                     Meihao Liao, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongyang Chen, Hongchao Qin, Guoren
-						Wang: Efficient Resistance Distance Computation: The Power of Landmark-based Approaches. SIGMOD, 2023. 
+						Wang. Efficient Resistance Distance Computation: The Power of Landmark-based Approaches. SIGMOD, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Resistance Distance Computation The Power of Landmark-based Approaches.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/Resistance-Landmark">(code)</a>
                 </p>
 
 
                 <p id="paper-53">
-                    Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Meihao Liao, Guoren Wang: Maximal Defective
-						Clique Enumeration. SIGMOD, 2023. 
+                    Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Meihao Liao, Guoren Wang. Maximal Defective Clique Enumeration. SIGMOD, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Maximal Defective Clique Enumeration.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/DefectiveClique">(code)</a>
                 </p>
 
 
                 <p id="paper-54">
-                    Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongchao Qin, Guoren Wang: Efficient
-						Biclique Counting in Large Bipartite Graphs. SIGMOD, 2023. 
+                    Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongchao Qin, Guoren Wang. Efficient Biclique Counting in Large Bipartite Graphs. SIGMOD, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Biclique Counting in Large Bipartite Graphs.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/biclique">(code)</a>
                 </p>
@@ -692,8 +683,7 @@
 
                 <p id="paper-55">
                     Qiangqiang Dai, <strong>Rong-Hua Li*</strong>, Xiaowei Ye, Meihao Liao, Weipeng Zhang, Guoren
-						Wang: Hereditary Cohesive Subgraphs Enumeration on Bipartite Graphs: The Power of Pivot-based
-						Approaches. SIGMOD, 2023. 
+						Wang. Hereditary Cohesive Subgraphs Enumeration on Bipartite Graphs: The Power of Pivot-based Approaches. SIGMOD, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Hereditary Cohesive Subgraphs Enumeration on Bipartite Graphs The Power of Pivot-based Approaches.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/BiHSE">(code)</a>
                 </p>
@@ -701,8 +691,7 @@
 
                 <p id="paper-56">
                     Meihao Liao, <strong>Rong-Hua Li*</strong>, Qiangqiang Dai, Hongyang Chen, Hongchao Qin, Guoren
-						Wang: Efficient Personalized PageRank Computation: The Power of Variance-Reduced Monte Carlo
-						Approaches. SIGMOD, 2023. 
+						Wang. Efficient Personalized PageRank Computation: The Power of Variance-Reduced Monte Carlo Approaches. SIGMOD, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Efficient Personalized PageRank Computation The Power of Variance-Reduced Monte Carlo Approaches.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/pvr">(code)</a>
                 </p>
@@ -712,7 +701,7 @@
 
 
                 <p id="paper-57">
-                    Xunkai Li, Zhengyu Wu, Wentao Zhang, Yinlin Zhu, <strong>Rong-Hua Li*</strong>, Guoren Wang. FedGTA. Topology-aware Averaging for Federated Graph Learning.  VLDB, 2023.
+                    Xunkai Li, Zhengyu Wu, Wentao Zhang, Yinlin Zhu, <strong>Rong-Hua Li*</strong>, Guoren Wang. FedGTA: Topology-aware Averaging for Federated Graph Learning. VLDB, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/FedGTA.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/FedGTA">(code)</a>
                 </p>
@@ -729,8 +718,7 @@
 
 
                 <p id="paper-59">
-                    Qi Zhang, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Yongheng Dai, Ye Yuan, Guoren Wang*:
-						Neighborhood Skyline on Graphs: Concepts, Algorithms and Applications. ICDE, 2023. 
+                    Qi Zhang, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Yongheng Dai, Ye Yuan, Guoren Wang*. Neighborhood Skyline on Graphs: Concepts, Algorithms and Applications. ICDE, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Neighborhood_Skyline_on_Graphs_Concepts_Algorithms_and_Applications.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/neighborhoodskylines">(code)</a>
                 </p>
@@ -743,8 +731,7 @@
 
 
                 <p id="paper-61">
-                    Ziqi Yin, Qi Zhang, Wentao Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang: Fairness-aware
-						Maximal Biclique Enumeration on Bipartite Graphs. ICDE, 2023. 
+                    Ziqi Yin, Qi Zhang, Wentao Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang. Fairness-aware Maximal Biclique Enumeration on Bipartite Graphs. ICDE, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Fairness-aware Maximal Biclique Enumeration on Bipartite Graphs.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/fairnesss-biclique">(code)</a>
                 </p>
@@ -754,8 +741,7 @@
 
 
                 <p id="paper-62">
-                    Longlong Lin, <strong>Rong-Hua Li*</strong>, Tao Jia: Scalable and Effective Conductance-based
-						Graph Clustering. AAAI, 2023. 
+                    Longlong Lin, <strong>Rong-Hua Li*</strong>, Tao Jia. Scalable and Effective Conductance-based Graph Clustering. AAAI, 2023.
                     &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Scalable and Effective Conductance-based Graph Clustering.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/PCon">(code)</a>
                 </p>
