--- a/groupPhotos.html
+++ b/groupPhotos.html
@@ -257,6 +257,11 @@ h2 {
 								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2025/2025-graduate.JPG" /></div>
 							</div>
 						</li>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2025/2025-910.jpg" /></div>
+							</div>
+						</li>
 					</ul>
 				</div>
 
