--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1341,13 +1341,13 @@ w\:* {behavior:url(#default#VML);}
 
 
                 <p id="paper-9">
-                    Enjun Du, Xunkai Li, Tian Jin, Zhihan Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang.. GraphMaster: Automated Graph Synthesis via LLM Agents in Data-Limited Environments. NeurIPS 2025 (Spotlight)
-                    <!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/GraphMaster: Automated Graph Synthesis via LLM Agents in Data-Limited Environments.pdf">(pdf)</a> -->
+                    Enjun Du(undergraduate), Xunkai Li, Tian Jin, Zhihan Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang. GraphMaster: Automated Graph Synthesis via LLM Agents in Data-Limited Environments. NeurIPS 2025 (Spotlight)
+                    &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/GraphMaster Automated Graph Synthesis via LLM Agents in Data-Limited Environments.pdf">(pdf)</a>
                 </p>
 
 
                 <p id="paper-10">
-                    Bowen Fan, Yuming Ai, Xunkai Li, Zhilin Guo, Zhu Lei, Guang Zeng, <strong>Rong-Hua Li</strong>, Guoren Wang.. OpenGU: A Comprehensive Benchmark for Graph Unlearning. NeurIPS 2025
+                    Bowen Fan, Yuming Ai, Xunkai Li, Zhilin Guo, Zhu Lei, Guang Zeng, <strong>Rong-Hua Li*</strong>, Guoren Wang. OpenGU: A Comprehensive Benchmark for Graph Unlearning. NeurIPS 2025
                     &nbsp;&nbsp;&nbsp;<a href=".\PaperFiles\OpenGU  A Comprehensive Benchmark for Graph Unlearning.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/bwfan-bit/OpenGU">(code)</a>
                 </p>
