--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
 				</div>
 			</div>
 
+            <div class="con01_t" style="border: none; border-radius: 10px; margin: -10px 0; padding: 2px 32px;">
+                <p style="font-size: 18px; font-family: 'Georgia', serif; font-style: italic; color: #2a5d9f; margin: 0; padding-left: 20px;">
+                    If people do not believe that mathematics is simple, it is only because they do not realize how complicated life is.
+                    <span style="font-size: 17px; color: #888; float: right; margin-top: 10px; font-family: 'Georgia', serif; font-style: italic;">— John von Neumann</span>
+                </p>
+            </div>
+
 			<div class="con01_t">
 				<h4>研究兴趣</h4>
 				<p>
@@ -277,13 +284,13 @@
 
 
                 <p id="paper-9">
-                    Enjun Du, Xunkai Li, Tian Jin, Zhihan Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang.. GraphMaster: Automated Graph Synthesis via LLM Agents in Data-Limited Environments. NeurIPS 2025 (Spotlight)
-                    <!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/GraphMaster: Automated Graph Synthesis via LLM Agents in Data-Limited Environments.pdf">(pdf)</a> -->
+                    Enjun Du(本科生), Xunkai Li, Tian Jin, Zhihan Zhang, <strong>Rong-Hua Li*</strong>, Guoren Wang. GraphMaster: Automated Graph Synthesis via LLM Agents in Data-Limited Environments. NeurIPS 2025 (Spotlight)
+                    &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/GraphMaster Automated Graph Synthesis via LLM Agents in Data-Limited Environments.pdf">(pdf)</a>
                 </p>
 
 
                 <p id="paper-10">
-                    Bowen Fan, Yuming Ai, Xunkai Li, Zhilin Guo, Zhu Lei, Guang Zeng, <strong>Rong-Hua Li</strong>, Guoren Wang.. OpenGU: A Comprehensive Benchmark for Graph Unlearning. NeurIPS 2025
+                    Bowen Fan, Yuming Ai, Xunkai Li, Zhilin Guo, Zhu Lei, Guang Zeng, <strong>Rong-Hua Li*</strong>, Guoren Wang. OpenGU: A Comprehensive Benchmark for Graph Unlearning. NeurIPS 2025
                     &nbsp;&nbsp;&nbsp;<a href=".\PaperFiles\OpenGU  A Comprehensive Benchmark for Graph Unlearning.pdf">(pdf)</a>
                     &nbsp;&nbsp;&nbsp;<a href="https://github.com/bwfan-bit/OpenGU">(code)</a>
                 </p>
@@ -1430,8 +1437,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.9.19
-		</div>
+				Rong-Hua Li</a> | 更新时间2025.9.19</div>
 	</div>
 	<!-- end of footer -->
 </body>
