--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 					<p>北京理工大学，计算机学院</p>
 					<p>北京市海淀区中关村南大街5号中心教学楼1233</p>
 					<p>电子邮箱：lironghuabit@126.com</p>
+                    <p>实验室主页：<a href="https://gdilab.cn" target="_blank">https://gdilab.cn</a></p>
 				</div>
 			</div>
 
@@ -227,13 +228,13 @@
 
 
                 <p id="paper-1">
-                    Longlong Lin, Quanao Li, Miao Qiao, Zeli Wang, Jin Zhao, <strong>Rong-Hua Li</strong>, Xin Luo, Tao Jia. NCSAC: Effective Neural Community Search via Attribute-augmented Conductance. IEEE Transactions on Knowledge and Data Engineering (Accepted).
+                    Longlong Lin, Quanao Li, Miao Qiao, Zeli Wang, Jin Zhao, <strong>Rong-Hua Li</strong>, Xin Luo, Tao Jia. NCSAC: Effective Neural Community Search via Attribute-augmented Conductance. IEEE Transactions on Knowledge and Data Engineering (Accepted)
                     <!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Effective Neural Community Search via Attribute-augmented Conductance. IEEE Transactions on Knowledge and Data Engineering.pdf">(pdf)</a> -->
                 </p>
 
 
                 <p id="paper-2">
-                    Jiaqi Jiang, <strong><strong>Rong-Hua Li</strong>*</strong>, Longlong Lin, Yalong Zhang, Yue Zeng, Xiaowei Ye, Guoren Wang. Pseudoarboricity-Based Skyline Important Community Search in Large Networks. IEEE Transactions on Knowledge and Data Engineering. (Accepted)
+                    Jiaqi Jiang, <strong><strong>Rong-Hua Li</strong>*</strong>, Longlong Lin, Yalong Zhang, Yue Zeng, Xiaowei Ye, Guoren Wang. Pseudoarboricity-Based Skyline Important Community Search in Large Networks. IEEE Transactions on Knowledge and Data Engineering (Accepted)
                     <!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Jiaqi Jiang, Rong-Hua Li*, Longlong Lin, Yalong Zhang, Yue Zeng, Xiaowei Ye, Guoren Wang. Pseudoarboricity-Based Skyline Important Community Search in Large Networks. IEEE Transactions on Knowledge and Data Engineering. (Accepted).pdf">(pdf)</a> -->
                 </p>
 
@@ -1458,7 +1459,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.10.21</div>
+				Rong-Hua Li</a> | 更新时间2025.11.7</div>
 	</div>
 	<!-- end of footer -->
 </body>
