--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@
 
 
                 <p id="paper-1">
-                    Yuming Ai, Xunkai Li, Jiaqi Chao, Bowen Fan, Zhengyu Wu, Yinlin Zhu, <strong>Rong-Hua Li*</strong>, Guoren Wang.. PAGE: A Unified Approach for Federated Graph Unlearning. AAAI 2026 (Accepted)
-                    <!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/A Unified Approach for Federated Graph Unlearning.pdf">(pdf)</a> -->
+                    Yuming Ai, Xunkai Li, Jiaqi Chao, Bowen Fan, Zhengyu Wu, Yinlin Zhu, <strong>Rong-Hua Li*</strong>, Guoren Wang. PAGE: A Unified Approach for Federated Graph Unlearning. AAAI 2026 (Accepted)
                 </p>
 
 
